--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
   },
   "homepage": "https://github.com/SgtClubby/selfbot-chatgpt#readme",
   "dependencies": {
-    "discord.js-selfbot-v13": "^2.13.3",
+    "discord.js": "^13.14.0",
+    "discord.js-selfbot-v13": "^2.14.11",
     "dotenv": "^16.0.3",
     "gpt-3-encoder": "^1.1.4",
     "mongoose": "^7.0.4",
